# mypy-issue-89-repro

./: README.md  devbox.json
my-python-project/: mypy.ini  pyproject.toml
my-python-project/my_python_project/: reportme.py
my-python-project/my_python_project/bar/: baz.py
my-python-project/my_python_project/foo/: example.py
