[tool.poetry]
name = "my-python-project"
version = "0.1.0"
description = ""
authors = ["Matthieu S <utybodev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.dev-dependencies]
mypy = "^1.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
